--- a/index.html
+++ b/index.html
@@ -14,59 +14,64 @@
             color: white;
             font-family: 'Press Start 2P', cursive;
             text-align: center;
-            overflow: hidden;
+            overflow: auto; /* Permite el desplazamiento */
             position: relative;
+            min-height: 100vh; /* Asegura que el body ocupe al menos toda la pantalla */
         }
         .container {
-            margin-top: 50px;
+            margin-top: 20px; /* Reducido para móviles */
+            margin-bottom: 20px; /* Espacio inferior para evitar cortes */
             position: relative;
             z-index: 1;
         }
         .among-us-theme {
             background-color: #2d2d44;
-            padding: 20px;
+            padding: 15px; /* Reducido para móviles */
             border-radius: 10px;
             border: 5px solid #ff4754;
         }
         h1 {
             color: #ff4754;
-            font-size: 3rem;
+            font-size: 2rem; /* Reducido para móviles */
         }
         h2 {
             color: #4bffa5;
-            font-size: 2rem;
+            font-size: 1.5rem; /* Reducido para móviles */
         }
         p {
-            font-size: 1.2rem;
+            font-size: 1rem; /* Reducido para móviles */
         }
         .btn-primary {
             background-color: #ff4754;
             border-color: #ff4754;
-            font-size: 1.2rem;
-            padding: 10px 20px;
+            font-size: 1rem; /* Reducido para móviles */
+            padding: 8px 16px; /* Reducido para móviles */
         }
         .btn-primary:hover {
             background-color: #ff6b6b;
             border-color: #ff6b6b;
         }
         .astronaut-img {
-            width: 150px;
-            margin: 20px;
+            max-width: 80px; /* Reducido para móviles */
+            height: auto;
+            margin: 10px; /* Reducido para móviles */
         }
         .cumpleanos-numero {
-            font-size: 10rem;
+            font-size: 5rem; /* Reducido para móviles */
             color: #ff4754;
-            margin: 20px 0;
+            margin: 10px 0; /* Reducido para móviles */
         }
         .foto-nino {
-            width: 200px;
+            max-width: 120px; /* Reducido para móviles */
+            height: auto;
             border-radius: 50%;
             border: 5px solid #4bffa5;
-            margin: 20px 0;
+            margin: 10px 0; /* Reducido para móviles */
         }
         .form-control {
             font-family: 'Press Start 2P', cursive;
             margin: 10px 0;
+            font-size: 0.9rem; /* Reducido para móviles */
         }
 
         /* Animación de planetas cayendo */
@@ -77,18 +82,18 @@
 
         .planet {
             position: absolute;
-            width: 50px;
-            height: 50px;
+            width: 30px; /* Reducido para móviles */
+            height: 30px; /* Reducido para móviles */
             background: url('planeta.png') no-repeat center center/cover;
             animation: fall linear infinite;
         }
 
         /* Tamaños y duraciones aleatorias para los planetas */
-        .planet1 { width: 40px; height: 40px; left: 10%; animation-duration: 10s; }
-        .planet2 { width: 60px; height: 60px; left: 30%; animation-duration: 15s; }
-        .planet3 { width: 50px; height: 50px; left: 50%; animation-duration: 12s; }
-        .planet4 { width: 70px; height: 70px; left: 70%; animation-duration: 18s; }
-        .planet5 { width: 80px; height: 80px; left: 90%; animation-duration: 20s; }
+        .planet1 { width: 25px; height: 25px; left: 10%; animation-duration: 10s; }
+        .planet2 { width: 35px; height: 35px; left: 30%; animation-duration: 15s; }
+        .planet3 { width: 30px; height: 30px; left: 50%; animation-duration: 12s; }
+        .planet4 { width: 40px; height: 40px; left: 70%; animation-duration: 18s; }
+        .planet5 { width: 45px; height: 45px; left: 90%; animation-duration: 20s; }
     </style>
 </head>
 <body>
@@ -108,7 +113,7 @@
                 <div class="cumpleanos-numero">6</div> <!-- Cambiado de 5 a 6 -->
 
                 <!-- Imágenes de astronautas y foto del niño -->
-                <div class="d-flex justify-content-center align-items-center">
+                <div class="d-flex justify-content-center align-items-center flex-wrap"> <!-- Flex-wrap para ajustar en móviles -->
                     <img src="1astronauta.png" alt="Astronauta 1" class="astronaut-img">
                     <img src="5082703962565620062.jpg" alt="Foto del niño" class="foto-nino">
                     <img src="2astronauta.png" alt="Astronauta 2" class="astronaut-img">
@@ -133,8 +138,8 @@
     </div>
 
     <!-- Sonido de fondo -->
-    <audio autoplay loop>
-        <source src="Among Us.mp3" type="audio/wav">
+    <audio id="backgroundAudio" loop>
+        <source src="Among Us.mp3" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
     </audio>
 
@@ -142,8 +147,17 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
-    <!-- Script para enviar datos a Google Sheets -->
+    <!-- Script para reproducir audio después de la interacción del usuario -->
     <script>
+        // Reproducir audio después de que el usuario interactúe con la página
+        document.addEventListener('click', function () {
+            const audio = document.getElementById('backgroundAudio');
+            audio.play().catch(() => {
+                console.log("La reproducción automática fue bloqueada por el navegador.");
+            });
+        });
+
+        // Script para enviar datos a Google Sheets
         document.getElementById('invitacionForm').addEventListener('submit', function (event) {
             event.preventDefault(); // Evita que el formulario se envíe de forma tradicional
 
