--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invitación de Cumpleaños - Among Us</title>
+    <title>Cumpleaños Mateo - Among Us</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Fonts -->
@@ -62,7 +62,7 @@
             margin: 10px 0;
         }
         .foto-nino {
-            max-width: 200px; /* Aumentamos el tamaño de la foto del niño */
+            max-width: 150px; /* Aumentamos el tamaño de la foto del niño */
             height: auto;
             border-radius: 50%;
             border: 5px solid #4bffa5;
