--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cumpleaños Mateo - Among Us</title>
+    <title>Invitación de Cumpleaños - Among Us</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Fonts -->
@@ -62,11 +64,11 @@
             margin: 10px 0;
         }
         .foto-nino {
-            max-width: 150px; /* Aumentamos el tamaño de la foto del niño */
+            max-width: 200px;
             height: auto;
             border-radius: 50%;
             border: 5px solid #4bffa5;
-            margin: 20px 0; /* Ajustamos el margen */
+            margin: 20px 0;
         }
         .form-control {
             font-family: 'Press Start 2P', cursive;
