--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
                 </div>
 
                 <p><strong>Temática:</strong> Among Us</p>
-                <p><strong>Fecha:</strong> 30 de abril</p>
+                <p><strong>Fecha:</strong> 29 de abril</p>
                 <p><strong>Lugar:</strong> Colegio Mi Dulce Amanecer</p>
 
                 <!-- Mensaje decorativo en lugar del formulario -->
                 <div class="mensaje-decorativo">
-                    ¡No faltes! Habrá juegos, sorpresas y mucha diversión.
+                    ¡Esperamos tu asistencia!
                 </div>
             </div>
         </div>
