--- a/index.html
+++ b/index.html
@@ -3,162 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invitación de Cumpleaños - Mateo</title>
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-color: #1e1e2f;
-            color: white;
-            font-family: 'Press Start 2P', cursive;
-            text-align: center;
-            overflow: auto;
-            position: relative;
-            min-height: 100vh;
-        }
-        .container {
-            margin-top: 20px;
-            margin-bottom: 20px;
-            position: relative;
-            z-index: 1;
-        }
-        .among-us-theme {
-            background-color: #2d2d44;
-            padding: 15px;
-            border-radius: 10px;
-            border: 5px solid #ff4754;
-        }
-        h1 {
-            color: #ff4754;
-            font-size: 2rem;
-        }
-        h2 {
-            color: #4bffa5;
-            font-size: 1.5rem;
-        }
-        p {
-            font-size: 1rem;
-        }
-        .btn-primary {
-            background-color: #ff4754;
-            border-color: #ff4754;
-            font-size: 1rem;
-            padding: 8px 16px;
-        }
-        .btn-primary:hover {
-            background-color: #ff6b6b;
-            border-color: #ff6b6b;
-        }
-        .astronaut-img {
-            max-width: 80px;
-            height: auto;
-            margin: 10px;
-        }
-        .cumpleanos-numero {
-            font-size: 5rem;
-            color: #ff4754;
-            margin: 10px 0;
-        }
-        .foto-nino {
-            max-width: 150px;
-            height: auto;
-            border-radius: 50%;
-            border: 5px solid #4bffa5;
-            margin: 20px 0;
-        }
-        .form-control {
-            font-family: 'Press Start 2P', cursive;
-            margin: 10px 0;
-            font-size: 0.9rem;
-        }
-
-        /* Animación de planetas cayendo */
-        @keyframes fall {
-            0% { transform: translateY(-100%); }
-            100% { transform: translateY(100vh); }
-        }
-
-        .planet {
-            position: absolute;
-            width: 30px;
-            height: 30px;
-            background: url('planeta.png') no-repeat center center/cover;
-            animation: fall linear infinite;
-        }
-
-        /* Tamaños y duraciones aleatorias para los planetas */
-        .planet1 { width: 25px; height: 25px; left: 10%; animation-duration: 10s; }
-        .planet2 { width: 35px; height: 35px; left: 30%; animation-duration: 15s; }
-        .planet3 { width: 30px; height: 30px; left: 50%; animation-duration: 12s; }
-        .planet4 { width: 40px; height: 40px; left: 70%; animation-duration: 18s; }
-        .planet5 { width: 45px; height: 45px; left: 90%; animation-duration: 20s; }
-
-        /* Estilo para el mensaje decorativo */
-        .mensaje-decorativo {
-            font-size: 1.2rem;
-            color: #4bffa5;
-            margin-top: 20px;
-        }
-    </style>
+    <title>Login con Firebase</title>
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- CSS personalizado -->
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Planetas en el fondo -->
-    <div class="planet planet1"></div>
-    <div class="planet planet2"></div>
-    <div class="planet planet3"></div>
-    <div class="planet planet4"></div>
-    <div class="planet planet5"></div>
-
-    <div class="container">
+    <div class="container mt-5">
         <div class="row justify-content-center">
-            <div class="col-md-8 among-us-theme">
-                <h1>¡Invitación de Cumpleaños!</h1>
-                <h2>Mateo Vicente</h2>
-                <p>¡Estás invitado a celebrar mi cumpleaños número:</p>
-                <div class="cumpleanos-numero">6</div>
-
-                <!-- Imágenes de astronautas y foto del niño -->
-                <div class="d-flex justify-content-center align-items-center flex-wrap">
-                    <img src="1astronauta.png" alt="Astronauta 1" class="astronaut-img">
-                    <img src="5082703962565620062.jpg" alt="Foto del niño" class="foto-nino">
-                    <img src="2astronauta.png" alt="Astronauta 2" class="astronaut-img">
-                </div>
-
-                <p><strong>Temática:</strong> Among Us</p>
-                <p><strong>Fecha:</strong> 29 de abril</p>
-                <p><strong>Lugar:</strong> Colegio Mi Dulce Amanecer</p>
-
-                <!-- Mensaje decorativo en lugar del formulario -->
-                <div class="mensaje-decorativo">
-                    ¡Esperamos tu asistencia!
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="text-center">Iniciar Sesión</h3>
+                    </div>
+                    <div class="card-body">
+                        <form id="loginForm">
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="email" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Contraseña</label>
+                                <input type="password" class="form-control" id="password" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+                        </form>
+                        <div class="mt-3 text-center">
+                            <p>¿No tienes cuenta? <a href="register.html">Regístrate</a></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Sonido de fondo -->
-    <audio id="backgroundAudio" loop>
-        <source src="Among Us.mp3" type="audio/mpeg">
-        Tu navegador no soporta el elemento de audio.
-    </audio>
-
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-
-    <!-- Script para reproducir audio después de la interacción del usuario -->
-    <script>
-        // Reproducir audio después de que el usuario interactúe con la página
-        document.addEventListener('click', function () {
-            const audio = document.getElementById('backgroundAudio');
-            audio.play().catch(() => {
-                console.log("La reproducción automática fue bloqueada por el navegador.");
-            });
-        });
-    </script>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+    <!-- Nuestro JS -->
+    <script src="js/auth.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
